# eiplgrader

./: .gitignore  Dockerfile  Dockerfile.c  Dockerfile.cpp  Dockerfile.go  Dockerfile.haskell  Dockerfile.java  Dockerfile.javascript  Dockerfile.light  Dockerfile.python  README-DOCKER.md  README.md  coverage.xml  docker-compose.yml  docker_entrypoint.py  example.py  example_test_cases.json  lint.sh  pyproject.toml  requirements-docker.txt  requirements.txt  run_grader.sh  run_tests.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  workflow-status.md
.github/workflows/: codeql.yml  comprehensive-tests.yml  docker-publish.yml  pages.yml  python-package.yml  test-languages.yml  test.yml
docs/: Gemfile  Gemfile.backup  README_MERMAID.md  _config.yml  build_diagrams.py  generate_diagrams.sh  index.markdown  index.md  migration.md  sql_implementation.md  test-mermaid.md  validate_liquid_syntax.py  validate_liquid_syntax_v2.py
docs/_includes/: head_custom.html  mermaid.html
docs/_posts/: 2024-08-12-welcome-to-jekyll.markdown
docs/_sass/: _theme.scss
docs/developer/: architecture.md  contributing.md  index.md  testing.md
docs/developer/api/: codegen-api.md  error-standards.md  index.md  language-api.md  tester-api.md  type-mappings.md
docs/developer/components/: codegen.md  index.md  tester.md
docs/developer/languages/: adding-languages.md  architecture.md  executors.md  index.md
docs/docs/: codegen.md  error_messages.md  migration_guide.md  research.md  test_case_format.md  tester.md  type_mappings.md
docs/guide/: advanced-features.md  basic-usage.md  docker.md  errors.md  index.md  languages.md  test-cases.md
docs/languages/: java.md
docs/mermaid_src/: architecture_diagram_1.mmd  architecture_diagram_2.mmd  architecture_diagram_3.mmd  architecture_diagram_4.mmd  architecture_diagram_5.mmd  architecture_diagram_6.mmd  architecture_diagram_7.mmd  architecture_diagram_8.mmd  architecture_diagram_9.mmd  architecture_system_corrected.mmd  components.mmd  executors.mmd  executors_diagram_1.mmd  index_diagram_1.mmd  pluggable_architecture.mmd  test-mermaid_diagram_1.mmd  test-mermaid_diagram_2.mmd
docs/quickstart/: c-cpp.md  go.md  haskell.md  index.md  java.md  javascript.md  python.md
eiplgrader/: __init__.py  codegen.py  tester.py
eiplgrader/languages/: __init__.py  base.py  code_extractor.py  code_processor.py  error_processor.py  extraction_patterns.py  factory.py  prompt_generator.py  registry.py  spec.py  validators.py
eiplgrader/languages/adapters/: __init__.py  bash_adapter.py  c_adapter.py  cpp_adapter.py  go_adapter.py  haskell_adapter.py  java_adapter.py  javascript_adapter.py  kotlin_adapter.py  ocaml_adapter.py  php_adapter.py  python_adapter.py  ruby_adapter.py  rust_adapter.py  sql_adapter.py  typescript_adapter.py
eiplgrader/languages/executors/: __init__.py  base_executors.py  bash_executor.py  c_executor.py  cpp_executor.py  go_executor.py  haskell_executor.py  java_executor.py  javascript_executor.py  kotlin_executor.py  ocaml_executor.py  php_executor.py  python_executor.py  ruby_executor.py  rust_executor.py  sql_executor.py  string_utils.py  templates.py  typescript_executor.py
eiplgrader/languages/templates/: base_cgbg.txt  base_redef.txt
examples/: bash_example.py  c_example.py  cpp_example.py  example_cgbg.py  example_redef.py  example_segmentation.py  go_example.py  haskell_example.py  java_example.py  javascript_example.py  kotlin_example.py  ocaml_example.py  php_example.py  python_example.py  ruby_example.py  rust_example.py  segmentation_few_shot.json  sql_example.py  typescript_example.py  validate_documentation_examples.py
examples/segmentation_few_shot_examples/: bubble_sort.json  count_words.json  find_maximum.json  prime_checker.json  sum_numbers.json
tests/: README.md  conftest.py  test_comprehensive_suite.py  test_tester.py
tests/edge_cases/: README.md  __init__.py  test_comprehensive_edge_cases.py
tests/edge_cases/test_error_scenarios/: __init__.py  test_boundary_conditions.py  test_cgbg_specific_failures.py  test_error_propagation.py  test_invalid_inputs.py  test_malformed_code.py
tests/edge_cases/test_resource_limits/: __init__.py  test_memory_scenarios.py  test_resource_management.py  test_security_boundaries.py  test_timeout_scenarios.py
tests/fixtures/mock_code_samples/: c_samples.py  cpp_samples.py  go_samples.py  haskell_samples.py  java_samples.py  javascript_samples.py  python_samples.py
tests/integration/: test_compilation_workflows.py  test_interpretation_workflows.py
tests/integration/test_registry/: test_language_registry.py
tests/languages/: __init__.py  test_base_language.py  test_bash.py  test_c.py  test_cpp.py  test_go.py  test_haskell.py  test_java.py  test_javascript.py  test_kotlin.py  test_ocaml.py  test_ocaml_integration.py  test_php.py  test_ruby.py  test_rust.py  test_sql.py  test_typescript.py
tests/unit/test_adapters/: __init__.py  test_adapter_base.py
tests/unit/test_executors/: __init__.py  test_base_executors.py  test_c_executor.py  test_cpp_executor.py  test_cross_language_consistency.py  test_go_executor.py  test_haskell_executor.py  test_java_executor.py  test_javascript_executor.py  test_python_executor.py  test_type_system_validation.py
