[tool.poetry]
name = "eiplgrader"
version = "0.1.10"
description = "A collection of autograders for the grading of Explain in Plain Language (EiPL) questions."
authors = ["David H. Smith IV <dhsmith2@illinois.edu>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/CoffeePoweredComputers/eiplgrader"
keywords = [
  "autograder",
  "eipl",
  "explain-in-plain-language",
  "eipe",
  "explain-in-plain-english"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = "^1.37.0"
importlib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
pylint = ">=2.17.4,<4.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "invalid-name",
  "import-error",
  "too-many-arguments",
  "too-many-positional-arguments"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
